--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.0",
+    "@types/react-text-mask": "^5.4.6",
     "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
@@ -56,6 +57,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
+    "react-text-mask": "^5.4.3",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
@@ -63,6 +65,7 @@
     "style-loader": "1.0.0",
     "styled-components": "^4.4.0",
     "terser-webpack-plugin": "1.4.1",
+    "text-mask-addons": "^3.8.0",
     "ts-pnp": "1.1.4",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "3.6.4",
