--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "react-ripples": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-text-mask": "^5.4.3",
     "resolve": "1.12.0",
