--- a/src/widgets/Auth/config.json
+++ b/src/widgets/Auth/config.json
@@ -1,54 +1,66 @@
 {
-  "signIn": [
-    {
-      "title": "Войти в аккаунт",
-      "description": "Пожалуйста, войдите в свой аккаунт",
-      "fields": [
+    "signIn": [
         {
-          "type": "text",
-          "icon": "account_circle",
-          "placeholder": "Введите логин",
-          "name": "login"
-        },
-        {
-          "type": "email",
-          "icon": "email",
-          "placeholder": "Введите email",
-          "name": "email"
-        },
-        {
-          "type": "password",
-          "icon": "lock",
-          "placeholder": "Пароль",
-          "name": "password"
-        },
-        {
-          "type": "password",
-          "icon": "lock",
-          "placeholder": "Повторите пароль",
-          "name": "repeatPassword"
+            "title": "Войти в аккаунт",
+            "description": "Пожалуйста, войдите в свой аккаунт",
+            "fields": [
+                {
+                    "type": "text",
+                    "icon": "account_circle",
+                    "placeholder": "Введите логин",
+                    "name": "login"
+                },
+                {
+                    "type": "password",
+                    "icon": "lock",
+                    "placeholder": "Пароль",
+                    "name": "password"
+                }
+            ]
         }
-      ]
-    }
-  ],
-  "signUp": [
-    {
-      "title": "Регистрация",
-      "description": "Для входа в чат вам нужно зарегестрироваться",
-      "fields": [
+    ],
+    "signUp": [
         {
-          "type": "text",
-          "icon": "account_circle",
-          "placeholder": "Введите логин",
-          "name": "login"
-        },
-        {
-          "type": "password",
-          "icon": "lock",
-          "placeholder": "Пароль",
-          "name": "password"
+            "title": "Регистрация",
+            "description": "Для входа в чат вам нужно зарегестрироваться",
+            "fields": [
+                {
+                    "type": "text",
+                    "icon": "account_circle",
+                    "placeholder": "Ваше имя",
+                    "name": "name"
+                },
+                {
+                    "type": "text",
+                    "icon": "account_circle",
+                    "placeholder": "Ваша фамилия",
+                    "name": "surName"
+                },
+                {
+                    "type": "text",
+                    "icon": "account_circle",
+                    "placeholder": "Введите логин",
+                    "name": "login"
+                },
+                {
+                    "type": "email",
+                    "icon": "email",
+                    "placeholder": "Введите email",
+                    "name": "email"
+                },
+                {
+                    "type": "password",
+                    "icon": "lock",
+                    "placeholder": "Пароль",
+                    "name": "password"
+                },
+                {
+                    "type": "password",
+                    "icon": "lock",
+                    "placeholder": "Повторите пароль",
+                    "name": "repeatPassword"
+                }
+            ]
         }
-      ]
-    }
-  ]
+    ]
 }
