--- a/src/modules/HomePage/config.json
+++ b/src/modules/HomePage/config.json
@@ -7,10 +7,54 @@
     "photo": "https://instagram.ftgd2-1.fna.fbcdn.net/vp/59438f66bd3db1c9a8a35fcb67ba9828/5E4231E4/t51.2885-19/s320x320/33404980_578629875854724_8075651071923453952_n.jpg?_nc_ht=instagram.ftgd2-1.fna.fbcdn.net",
     "isOnline": true
   },
-  "message": {
-    "text": "hello its me, i was here 5 minutes ago asd asd asda sdas d",
-    "date": "18:02",
-    "status": "sending"
-  },
-  "isMe": true
+  "messageList": [
+    {
+      "message": {
+        "id": "9c056ca9-221c-470e-89e3-ec7718840b9c",
+        "text": "Привет Насько",
+        "date": "18:01",
+        "status": "sending",
+        "user": {
+          "id": "1",
+          "name": "Evgeniy",
+          "surName": "Kobernik",
+          "email": "kobernikev@gmail.com",
+          "photo": "https://instagram.ftgd2-1.fna.fbcdn.net/vp/59438f66bd3db1c9a8a35fcb67ba9828/5E4231E4/t51.2885-19/s320x320/33404980_578629875854724_8075651071923453952_n.jpg?_nc_ht=instagram.ftgd2-1.fna.fbcdn.net",
+          "isOnline": true
+        }
+      }
+    },
+    {
+      "message": {
+        "id": "7d1a7db7-1d63-4f2d-ae66-3df2d028883d",
+        "text": "Ну как дела?",
+        "date": "18:02",
+        "status": "sending",
+        "user": {
+          "id": "1",
+          "name": "Evgeniy",
+          "surName": "Kobernik",
+          "email": "kobernikev@gmail.com",
+          "photo": "https://instagram.ftgd2-1.fna.fbcdn.net/vp/59438f66bd3db1c9a8a35fcb67ba9828/5E4231E4/t51.2885-19/s320x320/33404980_578629875854724_8075651071923453952_n.jpg?_nc_ht=instagram.ftgd2-1.fna.fbcdn.net",
+          "isOnline": true
+        }
+      }
+    },
+    {
+      "message": {
+        "id": "4981faaf-9fd4-4771-b308-3097bef9ea69",
+        "text": "Hello epta",
+        "date": "18:05",
+        "status": "read",
+        "user": {
+          "id": "2",
+          "name": "Nastio",
+          "surName": "Bushmelito",
+          "email": "anastasio@gmail.com",
+          "photo": "https://media.licdn.com/dms/image/C4D03AQF_hpU8XVffHQ/profile-displayphoto-shrink_800_800/0?e=1578528000&v=beta&t=jtmDYA_KeXqmeTITucgO_4G_d9LvxR1ezG7u45_OFw8",
+          "isOnline": true
+        }
+      }
+    }
+  ]
 }
