--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "styled-components": "^4.4.0",
     "terser-webpack-plugin": "1.4.1",
     "text-mask-addons": "^3.8.0",
+    "tinycolor2": "^1.4.1",
     "ts-pnp": "1.1.4",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "3.6.4",
