--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prettier": "^1.18.2",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-ripples": "^2.2.1",
