--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^4.1.19",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -54,14 +55,19 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.18.2",
+    "ramda": "^0.26.1",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
     "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
     "react-ripples": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-text-mask": "^5.4.3",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
@@ -153,5 +159,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.5"
   }
 }
